# ggx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: PROJECT.md  README.md
scripts/: ci.sh  release.sh
src/: ai.rs  changes.rs  cli.rs  gh.rs  git.rs  main.rs  tui.rs  ui.rs  update.rs
src/ai/: codex.rs  copilot.rs  generate.rs  mod.rs  opencode.rs
src/commands/: commit.rs  merge_common.rs  mod.rs
src/commands/branch/: context.rs  git.rs  mod.rs  name.rs  prompt.rs  run.rs  validation.rs
src/commands/commit/: changes.rs  command.rs  context.rs  git.rs  message.rs  mod.rs  prompt.rs  run.rs
src/commands/init/: config.rs  mod.rs  prompt.rs  run.rs  wizard.rs
src/commands/merge/: github.rs  mod.rs  run.rs
src/commands/pr/: changes.rs  context.rs  git.rs  github.rs  mod.rs  prompt.rs  run.rs  validation.rs
src/commands/rebase/: run.rs
src/commands/squash/: mod.rs  prompt.rs  run.rs
src/commands/sync/: run.rs
src/git/: branch.rs  command.rs  commit.rs  diff.rs  mod.rs  push.rs  stage.rs
src/vcs/: git.rs  github.rs  mod.rs
