[package]
name = "ggx"
version = "0.5.0"
edition = "2024"
description = "A fast AI-powered git workflow CLI"
repository = "https://github.com/maty-millien/ggx"
homepage = "https://github.com/maty-millien/ggx"
license = "MIT"
readme = "docs/README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1"
console = "0.16.3"
indicatif = "0.18.5"
libc = "0.2"
serde_json = "1"

[profile.dist]
inherits = "release"
lto = "thin"
